fixup backend test